--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   background: var(--color-4);
   width: 28rem;
   border-radius: 30px;
+  box-shadow: 0px 0px 60px 2px var(--color-3);
 }
 .title {
   margin: 0px 0px 13px 0px;
